# personal-rag

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/personal_rag/: __init__.py  bm25.py  chunk.py  cli.py  config.py  contextualize.py  embed.py  generate.py  index.py  ingest.py  retrieve.py  server.py  similar.py  watcher.py  web.py
tests/: test_bm25.py  test_chunk.py  test_citations.py  test_config.py  test_contextualize.py  test_generate.py  test_similar.py  test_watcher.py  test_web.py
