[project]
name = "personal-rag"
version = "0.3.0"
description = "Local retrieval-augmented QA over your own notes and PDFs. Fastembed + LanceDB + Claude. Optional Contextual Retrieval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dhruv Patel", email = "dhruv17062000@gmail.com" }]
keywords = ["rag", "retrieval", "claude", "lancedb", "embeddings", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "lancedb>=0.15.0",
    "pyarrow>=16.0.0",
    "fastembed>=0.4.0",
    "pypdf>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.scripts]
personal-rag = "personal_rag.cli:app"

[project.urls]
Homepage = "https://github.com/dhruvpatel1706/personal-rag"
Issues = "https://github.com/dhruvpatel1706/personal-rag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_rag"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
